XO_Project_UAT/Project--XOGrp--UAT/src/objects/Account_Snapshots__c.object
<CustomObject>
    <description>CSP-3326 30/60/90 Day on Cancel Saves</description>
    <fields>
        <fullName>Account_Value__c</fullName>
        <description>SUM(Zuora_MonthlyRecurringRevenue_c) for related Account when Commission_Line_Item_Status_c = Live</description>
        <label>Account Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Account Snapshots</relationshipLabel>
        <relationshipName>Account_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Period__c</fullName>
        <label>Snapshot Period</label>
        <picklist>
            <picklistValues>
                <fullName>0 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Day</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Snapshots</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Account Snapshots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>